feat: add rabbitMQ and new endpoint
